JFwknop - 1.2.0

    [Franck Joncourt]
    * The user can browse for the current IP used by the host in order to fill
      in the ALLOW_IP field - Useful if you send SPA packets on a local network
      and you have more than one network interface.
    * Change Look and Feel and use WebLaf - Closes #12
    * Improved wizard:
      + Add random key generation feature - Closes #15
      + Generate warning - Closes #16
        Automatic resolution is used by default, *-R* option from fwknop, rather
        than *source*.
      + Added GPG suport
    * Load ~/.fwknoprc file at startup - Closes #17
    * JFwknop configuration file is renamed from config.properties to
      .jfwknoprc and is created in user home directory - Closes #13
    * Added new entry in File menu to provide the ability to create an empty
      configuration - Closes #6
    * Added About window and provides information about the licence, copyright
      holder, github link, version.
    * The first key set in access file is the "SOURCE" key in order to comply with
      fwknop server parsing.
    * GPG keys are now 2048 bit long rather than 1024. Moreover, JFwknop creates
      GPG V1 keys and import them in GPG V2 keyring using installed gpg binary.

JFwknop - 1.1.0 - 02/10/2016

    [Franck Joncourt]
    * Enabled back GPG key creation.
    * Closed #1: Fwknop configuration combo box not updated when loading file
    * Closes #3: Current config is not saved when play/execute button is hit
    * Closes #4: Add a wizard to provide an easy way to setup a basic configuration
    * Closes #9: Add date and time to console logs
    * Closes #11: HMAC_DIGEST_TYPE not set in server access.conf file
    * Added tooltips to help user understand the meaning of some variables

JFwknop - 1.0.0 - 06/03/2016

    [Franck Joncourt]
    * First release